--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
                 </svg>
               </button>
-            <address class="page-address">
+            <address class="page-address nav-list-list">
                 <ul class="nav-list-con">
                     <li class="list list-address">
                         <a href="mailto:info@devstudio.com" class="link  menu-link menu-link-con">info@devstudio.com</a>
@@ -48,14 +48,14 @@
     </header>
     <main>
         <!-- HERO SECTION -->
-        <!-- <section class="hero-page">
+        <section class="hero-page">
             <div class="container">
                 <h1 class="hero-text">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
             </div>
-        </section> -->
+        </section>
         <!-- ADVANTAGES -->
-        <!-- <section class="advantages-page">
+        <section class="advantages-page">
         <div class="container">   
             <h2 class="advantages-text visually-hidden">Advantages</h2>
             <ul class="advantages-text-li">
@@ -105,10 +105,10 @@
                 </li>
             </ul>
         </div>   
-        </section> -->
+        </section>
         <!-- OUR TEAM -->
-        <!-- <section class="team-page-our">
-        <div class="container">
+        <section class="team-page-our">
+        <div class="container-team-page-our">
             <h2 class="team-text">Our Team</h2>
             <ul class="about-team">
                 <li class="list team-page">
@@ -261,9 +261,9 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
         <!-- OUR PORTFOLIO -->
-        <!-- <section class="our-portfolio-page">
+        <section class="our-portfolio-page">
         <div class="container">
             <h2 class="team-text">Our Portfolio</h2>
             <ul class="list-portfolio">
@@ -343,6 +343,7 @@
         </div>
         </section>
     </main>
+    
     <footer class="footer-page">
         <div class="container-footer">
             <div class="footer-logo-p">
@@ -510,21 +511,63 @@
                 
             </form>
         </div>
-    </div> -->
+    </div>
     <div class="mobile-menu">
-        <div class="mobile-menu-container">
-          <button class="mobile-menu-close" type="button">
-            <svg class="modal-form-close" type="button" aria-label="modal close button" width="8" height="8">
-                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-            </svg>
-          </button>
-          <nav>
-            <ul class="link list">
-              <li><a href="">Studio</a></li>
-              <li><a href="">Portfolio</a></li>
-              <li><a href="">Contacts</a></li>
-            </ul>
-          </nav>
+        <div class="container mobile-menu-container">
+            <button class="modal-form-close" type="button">
+                <svg class="modal-form-close-icon" type="button" aria-label="modal close button" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
+              </button>
+            <nav>
+                <ul class="mobile-menu-list list">
+                  <li class="header-nav"><a class="mobile-menu-list-nav link header-nav-a" href="">Studio</a></li>
+                  <li class="header-nav"><a class="mobile-menu-list-nav link" href="">Portfolio</a></li>
+                  <li class="header-nav"><a class="mobile-menu-list-nav link" href="">Contacts</a></li>
+                </ul>
+              </nav>
+              <address class="page-address">
+                <ul class="nav-list-con list">
+                    <li class="list-address">
+                        <a href="tel:+110001111111" class="menu-link menu-link-con link">+11 (000) 111-11-11</a>
+                    </li>
+                    <li class="list-address">
+                        <a href="mailto:info@devstudio.com" class="menu-link menu-link-con link">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
+            <div>
+                <ul class="footer-icons list">
+                    <li class="footer-icons-list">
+                        <a href="" class="footer-icons-list-a">
+                            <svg class="footer-icons-list-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-icons-list">
+                        <a href="" class="footer-icons-list-a">
+                            <svg class="footer-icons-list-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-icons-list">
+                        <a href="" class="footer-icons-list-a">
+                            <svg class="footer-icons-list-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-icons-list">
+                        <a href="" class="footer-icons-list-a">
+                            <svg class="footer-icons-list-svg" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
       </div>
 </body>
