goit-markup-hw-06

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
         <!-- ADVANTAGES -->
         <section class="advantages-page">
-        <div class="container">   
+        <div class="container container-advantages-page">   
             <h2 class="advantages-text visually-hidden">Advantages</h2>
             <ul class="advantages-text-li">
                 <li class="list advantages-list">
