goit-markup-hw-06

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div>
         </section>
         <!-- ADVANTAGES -->
-        <section class="advantages-page">
-        <div class="container container-advantages-page">   
+        <section  class="advantages-page">
+        <div class="container">   
             <h2 class="advantages-text visually-hidden">Advantages</h2>
             <ul class="advantages-text-li">
                 <li class="list advantages-list">
@@ -298,7 +298,7 @@
                         .\images\img-banking-tb.jpg 730w,
                         .\images\img-banking-ds.jpg 720w,
                         "
-                        sizes="(min-width: 1200px) 288px, (min-width: 768px) 356px, (max-width: 767px) 360px"
+                        sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 320px) 288px"
                         src="./images/img.jpg" alt="Banking App" width="360" height="300">
                         <p class="div-app-p">
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -342,7 +342,7 @@
                         .\images\img-medi-tb.jpg 730w,
                         .\images\img-medi-ds.jpg 720w,
                         "
-                        sizes="(min-width: 1200px) 288px, (min-width: 768px) 356px, (max-width: 767px) 360px"
+                        sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 320px) 288px"
                     src="./images/img-2.jpg" alt="Meditation App" width="360" height="300">
                     <p class="div-app-p">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -386,7 +386,7 @@
                         .\images\img-screen-tb.jpg 730w,
                         .\images\img-screen-ds.jpg 720w,
                         "
-                        sizes="(min-width: 1200px) 288px, (min-width: 768px) 356px, (max-width: 767px) 360px" 
+                        sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 320px) 288px"
                         src="./images/img-4.jpg" alt="Screen illustrations" width="360" height="300">
                     <p class="div-app-p">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -408,7 +408,7 @@
                         .\images\img-online-tb.jpg 730w,
                         .\images\img-online-ds.jpg 720w,
                         "
-                        sizes="(min-width: 1200px) 288px, (min-width: 768px) 356px, (max-width: 767px) 360px"
+                        sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 320px) 288px"
                     src="./images/img-5.jpg" alt="Online Courses" width="360" height="300">
                     <p class="div-app-p">
                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
