--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p class="sam-text">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
-                </li>
+                </li>   
                 <li class="list advantages-list">
                     <div class="advantages-list-div">
                     <svg class="icons-advantages" width="64" height="64">
@@ -426,6 +426,7 @@
 
     <footer class="footer-page">
         <div class="container-footer">
+            <div class="footer-logo-p-and-footer-p-icons">
             <div class="footer-logo-p">
                 <a href="./index.html" class="logo link logo-link-footer">Web<span class="logo-color logo-footer">Studio</span></a>
             <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -463,6 +464,7 @@
                     </li>
                 </ul>
             </div>
+        </div>
             <div class="form-button-footer">
                 <p class="form-button-footer-p">Subscribe</p>
                 <form class="form-footer">
