goit-markup-hw-06

--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
         <!-- OUR PORTFOLIO -->
         <section class="section">
             <div class="container">
+                <div class="div-app-img">
                 <h2 class="section-title">Our Portfolio</h2>
                 <ul class="list-portfolio">
                     <li class="list list-portfolio-img">
@@ -332,6 +333,7 @@
                             <p class="about-app">App</p>
                         </div>
                     </li>
+                </div>
                     <li class="list list-portfolio-img">
                         <div class="div-app-img">
                             <img srcset="
