--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header class="header-page">
         <!-- PAGE HEADER -->
         <div class="container nav-list-header">
+            <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
             <nav class="nav-list">
-                <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
                 <ul class="nav-list-list naw-list-after-logo">
                     <li class="list header-nav">
                         <a href="./index.html" class="link menu-link header-nav-a">Studio</a>
@@ -319,8 +319,8 @@
                                 <source type="image/jpg"
                                     srcset="./images/img-banking-mb.jpg, ./images/img-banking-mb@2x.jpg 2x"
                                     media="(min-width: 320px)">
-                                <img class="portfolio-image" src="./images/img-banking-mb.jpg" alt='Banking app' width="264"
-                                    height="260">
+                                <img class="portfolio-image" src="./images/img-banking-mb.jpg" alt='Banking app'
+                                    width="264" height="260">
                             </picture>
                             <p class="portfolio-image-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -344,8 +344,8 @@
                                 <source type="image/jpg"
                                     srcset="./images/img-cash-mb.jpg, ./images/img-cash-mb@2x.jpg 2x"
                                     media="(min-width: 320px)">
-                                <img class="portfolio-image" src="./images/img-cash-mb.jpg" alt='Cashless Payment' width="264"
-                                    height="260">
+                                <img class="portfolio-image" src="./images/img-cash-mb.jpg" alt='Cashless Payment'
+                                    width="264" height="260">
                             </picture>
                             <p class="portfolio-image-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -369,8 +369,8 @@
                                 <source type="image/jpg"
                                     srcset="./images/img-medi-mb.jpg, ./images/img-medi-mb@2x.jpg 2x"
                                     media="(min-width: 320px)">
-                                <img class="portfolio-image" src="./images/img-medi-mb.jpg" alt='Meditation App' width="264"
-                                    height="260">
+                                <img class="portfolio-image" src="./images/img-medi-mb.jpg" alt='Meditation App'
+                                    width="264" height="260">
                             </picture>
                             <p class="portfolio-image-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -394,8 +394,8 @@
                                 <source type="image/jpg"
                                     srcset="./images/img-taxi-mb.jpg, ./images/img-taxi-mb@2x.jpg 2x"
                                     media="(min-width: 320px)">
-                                <img class="portfolio-image" src="./images/img-taxi-mb.jpg" alt='Taxi Service' width="264"
-                                    height="260">
+                                <img class="portfolio-image" src="./images/img-taxi-mb.jpg" alt='Taxi Service'
+                                    width="264" height="260">
                             </picture>
                             <p class="portfolio-image-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -419,8 +419,8 @@
                                 <source type="image/jpg"
                                     srcset="./images/img-screen-mb.jpg, ./images/img-screen-mb@2x.jpg 2x"
                                     media="(min-width: 320px)">
-                                <img class="portfolio-image" src="./images/img-screen-mb.jpg" alt='Screen Illustrations' width="264"
-                                    height="260">
+                                <img class="portfolio-image" src="./images/img-screen-mb.jpg" alt='Screen Illustrations'
+                                    width="264" height="260">
                             </picture>
                             <p class="portfolio-image-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -444,8 +444,8 @@
                                 <source type="image/jpg"
                                     srcset="./images/img-online-mb.jpg, ./images/img-online-mb@2x.jpg 2x"
                                     media="(min-width: 320px)">
-                                <img class="portfolio-image" src="./images/img-online-mb.jpg" alt='Online Courses' width="264"
-                                    height="260">
+                                <img class="portfolio-image" src="./images/img-online-mb.jpg" alt='Online Courses'
+                                    width="264" height="260">
                             </picture>
                             <p class="portfolio-image-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
@@ -463,16 +463,15 @@
     </main>
 
     <footer class="footer-page">
-        <div class="container container--flex-baseline">
+        <div class="container container--flex-baseline container--tablet-tiny">
             <!-- <div class="footer-logo-p-and-footer-p-icons"> -->
-            <div class="footer-logo-p">
-                <a href="./index.html" class="logo link logo-link-footer">Web<span
-                        class="logo-color logo-footer">Studio</span></a>
-                <p class="text-footer">Increase the flow of customers and sales for your business with digital
+            <div class="footer-wrapper">
+                <a href="./index.html" class="logo logo--light">Web<span class="logo-span">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital
                     marketing & growth solutions.</p>
             </div>
-            <div class="footer-socials">
-                <p class="footer-p-icons">Social media</p>
+            <div class="footer-wrapper">
+                <p class="footer-title">Social media</p>
                 <ul class="footer-icons list">
                     <li class="footer-icons-list">
                         <a href="" class="footer-icons-list-a">
@@ -505,8 +504,8 @@
                 </ul>
             </div>
             <!-- </div> -->
-            <div class="form-button-footer">
-                <p class="form-button-footer-p">Subscribe</p>
+            <div class="footer-wrapper">
+                <p class="footer-title">Subscribe</p>
                 <form class="form-footer">
                     <label class="label-form-footer">
                         <input class="input-form-footer" type="email" placeholder="E-mail" name="user-e-mail">
