goit-markup-hw-06

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 </ul>
             </address>
             <div>
-                <ul class="footer-icons list">
+                <ul class="mobile-icons list">
                     <li class="footer-icons-list">
                         <a href="" class="footer-icons-list-a">
                             <svg class="footer-icons-list-svg" width="24" height="24">
