goit-markup-hw-06

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <div class="portfolio-image-wrapper">
                             <picture class="portfolio-picture">
                                 <source type="image/jpg"
-                                    srcset="./images/img-banking-ds.jpg, ./image/img-banking-ds@2x.jpg 2x"
+                                    srcset="./images/img-banking-ds.jpg, ./images/img-banking-ds@2x.jpg 2x"
                                     media="(min-width: 1158px)">
                                 <source type="image/jpg"
                                     srcset="./images/img-banking-tb.jpg, ./images/img-banking-tb@2x.jpg 2x"
